2009-10-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/irq/irq_asm.S, shared/irq/README.deprecated,
	shared/irq/irq.c, shared/vectors/vectors.h,
	shared/vectors/vectors_init.c, shared/vectors/README.deprecated,
	shared/vectors/vectors.S: Removed files.
	* Makefile.am: Update for removed files.

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/clock/clock.c, shared/irq/irq_init.c,
	shared/irq/openpic_i8259_irq.c: Changed exception header file
	includes.

2009-10-20	Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/pgtbl_setup.c: Fixed compiler warnings
	(added prototypes to function declarations etc.)

2009-10-20	Till Straumann <strauman@slac.stanford.edu>

	* shared/start/start.S, shared/startup/bspstart.c:
	let 'save_boot_params()' return a pointer to the commandline
	saved by the BSP and pass this pointer on to 'boot_card()'.

2009-10-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/startup/linkcmds: Add __SBSS_END__ and __SBSS2_END__.

2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/startup/zerobss.c: Remove nested externs.

2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/motorola/motorola.c, shared/vme/vme_universe.c:
	Add missing prototypes.

2009-10-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/openpic/openpic.c: Make openpic_writefield
	static inline (Get rid of GCC warning).

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/console/console.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* acinclude.m4: Add qemuppc.

2009-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/bootloader/bootldr.h: Change extern inline to static inline.

2009-09-11	Till Straumann <strauman@slac.stanford.edu>

	* shared/openpic/openpic.c: include the more generic <rtems/pci.h>
	rather than <bsp/pci.h>.

2009-09-11	Till Straumann <strauman@slac.stanford.edu>
