@@ -1,3 +1,7 @@
+2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* shared/startup/probeMemEnd.c: Add missing prototypes.
+
 2009-10-23	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* shared/irq/irq_asm.S, shared/irq/README.deprecated,
